--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "cloudinary-delete-server",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "scripts": { "start": "node index.js" },
+  "engines": { "node": ">=18" },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cloudinary": "^1.33.0",
+    "axios": "^1.7.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.19.2"
   }
 }
